--- a/kubernetes/cluster0/apps/media/prowlarr/ks.yaml
+++ b/kubernetes/cluster0/apps/media/prowlarr/ks.yaml
@@ -2,22 +2,22 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cluster-apps-radarr
+  name: cluster-apps-prowlarr
   namespace: flux-system
 spec:
   dependsOn:
     - name: cluster-apps-traefik
     - name: cluster-apps-longhorn
-  path: ./cluster/apps/default/radarr/app
+  path: ./kubernetes/cluster0/apps/media/prowlarr/app
   prune: true
   sourceRef:
     kind: GitRepository
-    name: home-ops-cluster
+    name: home-ops-cluster0
   healthChecks:
     - apiVersion: helm.toolkit.fluxcd.io/v2beta1
       kind: HelmRelease
-      name: radarr
-      namespace: default
+      name: prowlarr
+      namespace: media
   interval: 30m
   retryInterval: 1m
   timeout: 3m
