--- a/kubernetes/cluster0/apps/media/radarr/ks.yaml
+++ b/kubernetes/cluster0/apps/media/radarr/ks.yaml
@@ -2,13 +2,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cluster-apps-sonarr
+  name: cluster-apps-radarr
   namespace: flux-system
 spec:
   dependsOn:
     - name: cluster-apps-traefik
     - name: cluster-apps-longhorn
-  path: ./cluster/apps/default/sonarr/app
+  path: ./kustomization/cluster0/apps/media/radarr/app
   prune: true
   sourceRef:
     kind: GitRepository
@@ -16,7 +16,7 @@ spec:
   healthChecks:
     - apiVersion: helm.toolkit.fluxcd.io/v2beta1
       kind: HelmRelease
-      name: sonarr
+      name: radarr
       namespace: default
   interval: 30m
   retryInterval: 1m
