--- a/kubernetes/cluster0/apps/media/overseerr/ks.yaml
+++ b/kubernetes/cluster0/apps/media/overseerr/ks.yaml
@@ -8,16 +8,16 @@ spec:
   dependsOn:
     - name: cluster-apps-traefik
     - name: cluster-apps-longhorn
-  path: ./cluster/apps/default/overseerr/app
+  path: ./kubernetes/cluster/apps/media/overseerr/app
   prune: true
   sourceRef:
     kind: GitRepository
-    name: home-ops-cluster
+    name: home-ops-cluster0
   healthChecks:
     - apiVersion: helm.toolkit.fluxcd.io/v2beta1
       kind: HelmRelease
       name: overseerr
-      namespace: default
+      namespace: media
   interval: 30m
   retryInterval: 1m
   timeout: 3m
