--- a/kubernetes/cluster0/apps/media/sabnzbd/ks.yaml
+++ b/kubernetes/cluster0/apps/media/sabnzbd/ks.yaml
@@ -2,13 +2,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cluster-apps-qbittorrent
+  name: cluster-apps-sabnzbd
   namespace: flux-system
 spec:
   dependsOn:
     - name: cluster-apps-traefik
     - name: cluster-apps-longhorn
-  path: ./cluster/apps/default/qbittorrent/app
+  path: ./kubernetes/cluster0/apps/media/sabnzbd/app
   prune: true
   sourceRef:
     kind: GitRepository
@@ -16,8 +16,8 @@ spec:
   healthChecks:
     - apiVersion: helm.toolkit.fluxcd.io/v2beta1
       kind: HelmRelease
-      name: qbittorrent
-      namespace: default
+      name: sabnzbd
+      namespace: media
   interval: 30m
   retryInterval: 1m
   timeout: 3m
