--- a/kubernetes/cluster0/apps/monitoring/grafana/ks.yaml
+++ b/kubernetes/cluster0/apps/monitoring/grafana/ks.yaml
@@ -8,16 +8,16 @@ spec:
   dependsOn:
     - name: cluster-apps-longhorn
     - name: cluster-apps-traefik
-  path: ./cluster/apps/default/grafana/app
+  path: ./kubernetes/cluster0/apps/monitoring/grafana/app
   prune: true
   sourceRef:
     kind: GitRepository
-    name: home-ops-cluster
+    name: home-ops-cluster0
   healthChecks:
     - apiVersion: helm.toolkit.fluxcd.io/v2beta1
       kind: HelmRelease
       name: grafana
-      namespace: default
+      namespace: monitoring
   interval: 30m
   retryInterval: 1m
   timeout: 3m
