--- a/kubernetes/cluster0/apps/media/sonarr/ks.yaml
+++ b/kubernetes/cluster0/apps/media/sonarr/ks.yaml
@@ -12,12 +12,12 @@ spec:
   prune: true
   sourceRef:
     kind: GitRepository
-    name: home-ops-cluster
+    name: home-ops-cluster0
   healthChecks:
     - apiVersion: helm.toolkit.fluxcd.io/v2beta1
       kind: HelmRelease
       name: sonarr
-      namespace: default
+      namespace: media
   interval: 30m
   retryInterval: 1m
   timeout: 3m
