--- a/kubernetes/cluster0/apps/monitoring/kustomization.yaml
+++ b/kubernetes/cluster0/apps/monitoring/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - ./namespace.yaml
   # Flux-Kustomizations
   - ./changedetection-io/ks.yaml
+  - ./grafana/ks.yaml
   - ./kube-prometheus-stack/ks.yaml
   - ./loki-stack/ks.yaml
   - ./uptime-kuma/ks.yaml
