--- a/kubernetes/cluster0/apps/media/kustomization.yaml
+++ b/kubernetes/cluster0/apps/media/kustomization.yaml
@@ -11,7 +11,7 @@ resources:
   - ./overseerr/ks.yaml
   - ./plex/ks.yaml
   - ./prowlarr/ks.yaml
-  - ./qbittorrent/ks.yaml
+  # - ./qbittorrent/ks.yaml
   - ./radarr/ks.yaml
   - ./sabnzbd/ks.yaml
   - ./sonarr/ks.yaml
