--- a/kubernetes/cluster0/apps/media/plex/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/media/plex/app/helm-release.yaml
@@ -38,7 +38,7 @@ spec:
         annotations:
           io.cilium/lb-ipam-ips: ${PLEX_IP}
           traefik.ingress.kubernetes.io/service.serversscheme: https
-        externalTrafficPolicy: Local
+        externalTrafficPolicy: Cluster
         ports:
           http:
             port: 32400
