enable brr for cilium

--- a/kubernetes/cluster0/apps/kube-system/cilium/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/kube-system/cilium/app/helm-release.yaml
@@ -29,7 +29,7 @@ spec:
     autoDirectNodeRoutes: true
     bandwidthManager:
       enabled: true
-      # bbr: true # needs kernel 6.1.39
+      bbr: true
     bpf:
       masquerade: true
     bgp:
