update details on brr

--- a/kubernetes/cluster0/apps/kube-system/cilium/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/kube-system/cilium/app/helm-release.yaml
@@ -27,9 +27,9 @@ spec:
     keepHistory: false
   values:
     autoDirectNodeRoutes: true
-    bandwidthManager:
-      enabled: true
-      bbr: true
+    # bandwidthManager:
+    #   enabled: true
+      # bbr: true needs kernel 5.18 or newer
     bpf:
       masquerade: true
     bgp:
