messing with bpf options

--- a/kubernetes/cluster0/apps/kube-system/cilium/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/kube-system/cilium/app/helm-release.yaml
@@ -31,7 +31,8 @@ spec:
     #   enabled: true
       # bbr: true needs kernel 5.18 or newer
     bpf:
-      masquerade: true
+      masquerade: false
+      monitorAggregation: none
     bgp:
       enabled: false
     cluster:
