remove the nodeSelector for l2 policy cilium

--- a/kubernetes/cluster0/apps/kube-system/cilium/config/cilium-l2.yaml
+++ b/kubernetes/cluster0/apps/kube-system/cilium/config/cilium-l2.yaml
@@ -9,6 +9,6 @@ spec:
   interfaces:
     - ^enp.*
     # - ^eth[0-9]+
-  nodeSelector:
-    matchLabels:
-      kubernetes.io/os: linux
+  # nodeSelector:
+  #   matchLabels:
+  #     kubernetes.io/os: linux
