--- a/kubernetes/cluster0/apps/kube-system/cilium/config/cilium-l2.yaml
+++ b/kubernetes/cluster0/apps/kube-system/cilium/config/cilium-l2.yaml
@@ -8,7 +8,8 @@ spec:
   loadBalancerIPs: true
   interfaces:
     - ^enp.*
-    # - ^eth[0-9]+
-  # nodeSelector:
-  #   matchLabels:
-  #     kubernetes.io/os: linux
+    - ^eno[0-9]+
+    - ^eth[0-9]+
+  nodeSelector:
+    matchLabels:
+      kubernetes.io/os: linux
