--- a/kubernetes/cluster0/apps/networking/blocky/app/helm-release-primary.yaml
+++ b/kubernetes/cluster0/apps/networking/blocky/app/helm-release-primary.yaml
@@ -53,6 +53,7 @@ spec:
         type: LoadBalancer
         annotations:
           io.cilium/lb-ipam-ips: ${PRIMARY_DNS_IP}
+        externalTrafficPolicy: Cluster
         ports:
           dns-tcp:
             enabled: true
