🤷 don't even know, wtf

--- a/kubernetes/cluster0/apps/kube-system/cilium/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/kube-system/cilium/app/helm-release.yaml
@@ -27,8 +27,8 @@ spec:
     keepHistory: false
   values:
     autoDirectNodeRoutes: true
-    # bandwidthManager:
-    #   enabled: true
+    bandwidthManager:
+      enabled: true
       # bbr: true needs kernel 5.18 or newer
     bpf:
       masquerade: true
