--- a/kubernetes/cluster0/apps/kube-system/cilium/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/kube-system/cilium/app/helm-release.yaml
@@ -10,7 +10,8 @@ spec:
   chart:
     spec:
       chart: cilium
-      version: 1.14.2
+      # version: 1.14.2
+      version: 1.15.0-pre.0
       sourceRef:
         kind: HelmRepository
         name: cilium
