rollback cilium to stable

--- a/kubernetes/cluster0/apps/kube-system/cilium/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/kube-system/cilium/app/helm-release.yaml
@@ -10,8 +10,7 @@ spec:
   chart:
     spec:
       chart: cilium
-      # version: 1.14.2
-      version: 1.15.0-pre.0
+      version: 1.14.2
       sourceRef:
         kind: HelmRepository
         name: cilium
