--- a/kubernetes/cluster0/apps/home/mosquitto/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/home/mosquitto/app/helm-release.yaml
@@ -33,7 +33,8 @@ spec:
       main:
         type: LoadBalancer
         annotations:
-          io.cilium/lb-ipam-ips: ${MOSQUITTO_IP}
+          # io.cilium/lb-ipam-ips: ${MOSQUITTO_IP}
+          metallb.universe.tf/loadBalancerIPs: ${MOSQUITTO_IP}
         externalTrafficPolicy: Cluster
         ports:
           http:
