--- a/kubernetes/cluster0/apps/networking/blocky/app/helm-release-secondary.yaml
+++ b/kubernetes/cluster0/apps/networking/blocky/app/helm-release-secondary.yaml
@@ -52,7 +52,8 @@ spec:
         enabled: true
         type: LoadBalancer
         annotations:
-          io.cilium/lb-ipam-ips: ${SECONDARY_DNS_IP}
+          # io.cilium/lb-ipam-ips: ${SECONDARY_DNS_IP}
+          metallb.universe.tf/loadBalancerIPs: ${SECONDARY_DNS_IP}
         externalTrafficPolicy: Cluster
         ports:
           dns-tcp:
