--- a/kubernetes/cluster0/apps/kube-system/cilium/ks.yaml
+++ b/kubernetes/cluster0/apps/kube-system/cilium/ks.yaml
@@ -20,7 +20,7 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cluster-apps-cilium
+  name: cluster-apps-cilium-config
   namespace: flux-system
 spec:
   path: ./kubernetes/cluster0/apps/kube-system/cilium/config
