--- a/kubernetes/cluster0/apps/networking/blocky/app/helm-release-secondary.yaml
+++ b/kubernetes/cluster0/apps/networking/blocky/app/helm-release-secondary.yaml
@@ -54,6 +54,7 @@ spec:
         annotations:
           # io.cilium/lb-ipam-ips: ${SECONDARY_DNS_IP}
           metallb.universe.tf/loadBalancerIPs: ${SECONDARY_DNS_IP}
+          metallb.universe.tf/allow-shared-ip: *app
         externalTrafficPolicy: Cluster
         ports:
           dns-tcp:
