--- a/kubernetes/cluster0/apps/networking/blocky/app/helm-release-primary.yaml
+++ b/kubernetes/cluster0/apps/networking/blocky/app/helm-release-primary.yaml
@@ -54,7 +54,7 @@ spec:
         annotations:
           # io.cilium/lb-ipam-ips: ${PRIMARY_DNS_IP}
           metallb.universe.tf/loadBalancerIPs: ${PRIMARY_DNS_IP}
-        externalTrafficPolicy: Cluster
+        externalTrafficPolicy: Local
         ports:
           dns-tcp:
             enabled: true
