no prometheus ingress

--- a/kubernetes/cluster0/apps/monitoring/kube-prometheus-stack/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/monitoring/kube-prometheus-stack/app/helm-release.yaml
@@ -102,14 +102,7 @@ spec:
       enabled: false
     prometheus:
       ingress:
-        enabled: true
-        ingressClassName: internal
-        pathType: Prefix
-        hosts:
-          - &host prometheus.devbu.io
-        tls:
-          - hosts:
-              - *host
+        enabled: false
       thanosService:
         enabled: true
       thanosServiceMonitor:
