no alertmanager ingress

--- a/kubernetes/cluster0/apps/monitoring/kube-prometheus-stack/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/monitoring/kube-prometheus-stack/app/helm-release.yaml
@@ -21,14 +21,7 @@ spec:
     cleanPrometheusOperatorObjectNames: true
     alertmanager:
       ingress:
-        enabled: true
-        pathType: Prefix
-        ingressClassName: internal
-        hosts:
-          - &host alertmanager.devbu.io
-        tls:
-          - hosts:
-              - *host
+        enabled: false
       alertmanagerSpec:
         replicas: 2
         useExistingSecret: true
