--- a/kubernetes/cluster0/apps/monitoring/kube-prometheus-stack/app/kustomization.yaml
+++ b/kubernetes/cluster0/apps/monitoring/kube-prometheus-stack/app/kustomization.yaml
@@ -5,6 +5,6 @@ resources:
   - ./helm-release.yaml
 labels:
   - pairs:
-      app.kubernetes.io/name: loki
-      app.kubernetes.io/instance: loki
+      app.kubernetes.io/name: prometheus
+      app.kubernetes.io/instance: prometheus
 
