--- a/kubernetes/cluster0/apps/monitoring/kube-prometheus-stack/ks.yaml
+++ b/kubernetes/cluster0/apps/monitoring/kube-prometheus-stack/ks.yaml
@@ -1,21 +1,21 @@
-# ---
-# apiVersion: kustomize.toolkit.fluxcd.io/v1
-# kind: Kustomization
-# metadata:
-#   name: cluster-apps-kube-prometheus-stack
-#   namespace: flux-system
-# spec:
-#   path: ./kubernetes/cluster0/apps/monitoring/kube-prometheus-stack/app
-#   prune: true
-#   sourceRef:
-#     kind: GitRepository
-#     name: home-ops-cluster0
-#   healthChecks:
-#     - apiVersion: helm.toolkit.fluxcd.io/v2beta1
-#       kind: HelmRelease
-#       name: prometheus
-#       namespace: monitoring
-#   interval: 30m
-#   retryInterval: 1m
-#   timeout: 3m
-#
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: cluster-apps-kube-prometheus-stack
+  namespace: flux-system
+spec:
+  path: ./kubernetes/cluster0/apps/monitoring/kube-prometheus-stack/app
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: home-ops-cluster0
+  healthChecks:
+    - apiVersion: helm.toolkit.fluxcd.io/v2beta1
+      kind: HelmRelease
+      name: prometheus
+      namespace: monitoring
+  interval: 30m
+  retryInterval: 1m
+  timeout: 3m
+
