actually enable local path provisioner

--- a/kubernetes/cluster0/apps/kube-system/kustomization.yaml
+++ b/kubernetes/cluster0/apps/kube-system/kustomization.yaml
@@ -7,4 +7,5 @@ resources:
   # Flux-Kustomizations
   - ./cilium/ks.yaml
   - ./intel-device-plugin/ks.yaml
+  - ./local-path-provisioner/ks.yaml
   - ./node-feature-discovery/ks.yaml
