--- a/kubernetes/cluster0/apps/monitoring/kube-prometheus-stack/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/monitoring/kube-prometheus-stack/app/helm-release.yaml
@@ -85,7 +85,7 @@ spec:
         storageSpec:
           volumeClaimTemplate:
             spec:
-              storageClassName: local-path
+              storageClassName: longhorn
               resources:
                 requests:
                   storage: 20Gi
