--- a/kubernetes/cluster0/apps/networking/traefik/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/networking/traefik/app/helm-release.yaml
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: traefik
-      version: 24.0.0
+      version: 25.0.0
       sourceRef:
         kind: HelmRepository
         name: traefik-charts
@@ -70,7 +70,8 @@ spec:
       - "--providers.kubernetescrd.allowexternalnameservices=true"
     ports:
       web:
-        redirectTo: websecure
+        redirectTo: 
+          port: websecure
       websecure:
         exposedPort: 443  
         tls:
