add vpn portforwarding provider

--- a/kubernetes/cluster0/apps/media/qbittorrent/app/secret.sops.yaml
+++ b/kubernetes/cluster0/apps/media/qbittorrent/app/secret.sops.yaml
@@ -5,10 +5,11 @@ metadata:
     namespace: media
 type: Opaque
 stringData:
-    VPN_SERVICE_PROVIDER: ENC[AES256_GCM,data:jpQZfPJUPw==,iv:J7UjnzG0W36/FdFAOi3Kmi/eVy0pgVTNmaN6GTUPGDs=,tag:bLG0tuv+c5rdQRV113Aq3A==,type:str]
-    OPENVPN_USER: ENC[AES256_GCM,data:9e/iJc8Mo7ZchVO2AJ9cvuTuP0xqcNdx,iv:6704CSqr0DdHRpcpxqhP1kaC61IknJZ+qcaZwdK5lO4=,tag:bQts+ZVwybNZcdKtcfpXzQ==,type:str]
-    OPENVPN_PASSWORD: ENC[AES256_GCM,data:jWDK8U361Pm8lzES5gVzGIvlt10QhNUM,iv:/Hr5V/KJZuGdn+yogrFcAB0Mvyuyl10/D8BvxvnhRGw=,tag:3kOHKm8QQErchqaSr6GICA==,type:str]
-    SERVER_REGIONS: ENC[AES256_GCM,data:5e1duijOD9HvaoM=,iv:Sm1fWv9ujqGRqZ3WTbBUEZdm3cWaAO2Mjx5iQbtGjyU=,tag:0TReHYcsickjqQTgrHXREA==,type:str]
+    VPN_SERVICE_PROVIDER: ENC[AES256_GCM,data:ige3zHnBvg==,iv:8hRmAvBxOrHDOAhiqztBMnpmNwu0o5qgIe9nW54eV0E=,tag:XkM+A2d9nOWkQdbYxo2wzg==,type:str]
+    VPN_PORT_FORWARDING_PROVIDER: ENC[AES256_GCM,data:o3UyIIPkSQ==,iv:yBgbmQoMqayAn3Pl5+4U5hS3s1LPcAhgTBqMBtpjDho=,tag:FXJGMFlvqg3LR77HLOUGuQ==,type:str]
+    OPENVPN_USER: ENC[AES256_GCM,data:JZZX37X6njTwXlKtbmjHWkg3CLGcqBux,iv:hjDn+2N3taZDX4/DAuJrNjUxttY5D2f3PXSZyr8tjYc=,tag:k/SRPa1BT/0d4YL6HmrRuQ==,type:str]
+    OPENVPN_PASSWORD: ENC[AES256_GCM,data:1IasgWs7COFgzzDsw7Gq8ddOhL2fNG8l,iv:aM0kyuF1tWoo43ue8RImfIhyxC/QvMAEQDPdNDVae4Q=,tag:nW5SBGlP7qsKBH0G7wRRQA==,type:str]
+    SERVER_REGIONS: ENC[AES256_GCM,data:/wyNqHvsBh2pKQ4=,iv:KVh+sirq6AupoE1FCIk9vdQ6Y7KP9Og1+3XkktiGcrI=,tag:Lzpvh4y0y4bm/K6lPE5cHg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -18,14 +19,14 @@ sops:
         - recipient: age1582vh25trj6w7klwt38d44n5nr8njr8rrxxx5kcfu3y2ezx9ss3s6j24ex
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWWlVkL2dVMFZxazljRmVN
-            bGNiSFRnbTlHaFM3TnVLZXNyRlFQaTl6dG1VCnYxNFdUU2xYcnpyNEgzNWxuTnlW
-            dzkwNXQ1TXRGT0FFSUlIaWFuMW9xajQKLS0tIFd4b2N4cEZLbVArZjJYT1FvTGRP
-            MzYxSjZsS1RaWExPOS9xdmdCMDhQYkEKPk4+Q/cqrctmWjl9tieBy03v8F66ijGD
-            aKQ3opxqCfNZ1S2Yp6z8OHXP7h2Yly6FpFOkqH7l46/Ru7AOcKJxbQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxUmM0ODh1MVZCMk9RV3hT
+            bXRmNk5BWDdpYUMyck5JQTFzTUx3RDdDRGdnCk82L21mVFUxNDJKZVFsQjB2d0Uz
+            OFVBbldhaThYOHJ4WWNpQlRZVHdab3cKLS0tIGJjQUcrSFJKeFdJYTErRE1vQmxD
+            T2JqUEF5NStDWWxEWmQrSmhaT2luOWsKmDHvs3vaz6OxwUlCeqo+I+YrURXHpHuI
+            Z0EAEOlP2C6X4Jewg3kUx3+Dh14ZOcRx7kbd5/5vW7adDs7fJV9UMw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-09-29T00:56:03Z"
-    mac: ENC[AES256_GCM,data:8451gYiMTCyL4tXkPaO24i0n6Ho7RMVlgoQFU/VUbwAgAKFwpns7RY2+KYphp6RZVKUzFArEcA4lDeooLshM8/vljmoDAuLwRbodtxJ3lvBNQAjwq6QuUjfYVBXzGNGu3mE/1VxbmngIfhbYDzEE0+PIuqdrH3LpLd08/mq2p9Q=,iv:BWIRoHnAW9P28iz6+Yl4eY9IMO62DWTl63VrY7d1VAE=,tag:IyLuT22v+GmvDKYMFD8y6Q==,type:str]
+    lastmodified: "2023-11-08T19:09:30Z"
+    mac: ENC[AES256_GCM,data:yvVGqND68evMTv/2v8S+pwOYoluz/bEAjuDAzzDV7IpAOw288+3X7CVxNHU3YfvVmXJZdjQu/y3SkySsPE5p7LxoliERYoV5Ifw/dcakLG7OLxUQ2/t7sTbafKH0Vatlad9xYSuZ5X4sa7qS4lSnNoVZQLYhm5fDygnbQggKShw=,iv:/4mJ7Fc2hjESFRAHMLq3vCsUjRAoCmoUYGx8trNhVkY=,tag:0MQQQFsbAEL/6ITSnYYgzw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.8.0
+    version: 3.8.1
