nordvpn doesnt support portforwarding 🤦

--- a/kubernetes/cluster0/apps/media/qbittorrent/app/secret.sops.yaml
+++ b/kubernetes/cluster0/apps/media/qbittorrent/app/secret.sops.yaml
@@ -5,11 +5,10 @@ metadata:
     namespace: media
 type: Opaque
 stringData:
-    VPN_SERVICE_PROVIDER: ENC[AES256_GCM,data:ige3zHnBvg==,iv:8hRmAvBxOrHDOAhiqztBMnpmNwu0o5qgIe9nW54eV0E=,tag:XkM+A2d9nOWkQdbYxo2wzg==,type:str]
-    VPN_PORT_FORWARDING_PROVIDER: ENC[AES256_GCM,data:o3UyIIPkSQ==,iv:yBgbmQoMqayAn3Pl5+4U5hS3s1LPcAhgTBqMBtpjDho=,tag:FXJGMFlvqg3LR77HLOUGuQ==,type:str]
-    OPENVPN_USER: ENC[AES256_GCM,data:JZZX37X6njTwXlKtbmjHWkg3CLGcqBux,iv:hjDn+2N3taZDX4/DAuJrNjUxttY5D2f3PXSZyr8tjYc=,tag:k/SRPa1BT/0d4YL6HmrRuQ==,type:str]
-    OPENVPN_PASSWORD: ENC[AES256_GCM,data:1IasgWs7COFgzzDsw7Gq8ddOhL2fNG8l,iv:aM0kyuF1tWoo43ue8RImfIhyxC/QvMAEQDPdNDVae4Q=,tag:nW5SBGlP7qsKBH0G7wRRQA==,type:str]
-    SERVER_REGIONS: ENC[AES256_GCM,data:/wyNqHvsBh2pKQ4=,iv:KVh+sirq6AupoE1FCIk9vdQ6Y7KP9Og1+3XkktiGcrI=,tag:Lzpvh4y0y4bm/K6lPE5cHg==,type:str]
+    VPN_SERVICE_PROVIDER: ENC[AES256_GCM,data:pR3rmdNKOw==,iv:UOaS22OlwklWrlymllzA/CMuJ+bSqWKflcmmc2PiKgU=,tag:lY0h+uRY1K0vcXoVUEUeZg==,type:str]
+    OPENVPN_USER: ENC[AES256_GCM,data:2HsdbyA+xgp7wmRKJR5rRfmo4j596Buc,iv:aUNtGsTQiz0+dz8VbIQvhQpiFQm/y5uRBravSw7+kbQ=,tag:Ue7s4smaIir5hf8IvysBqg==,type:str]
+    OPENVPN_PASSWORD: ENC[AES256_GCM,data:k7exlhdZRX62znQIJ26OvtMneh5Zn4ue,iv:aG+h3oyCqgoTsw88/G2Djqm2bp5b87fiHlQlJjZX3cE=,tag:YvHIBqF7ynvvmDgfRh2KVw==,type:str]
+    SERVER_REGIONS: ENC[AES256_GCM,data:jZ0Qwv4AxCdgS1g=,iv:AXeCjNgAmWLQu720sHaHzFRWCE3TQQ0utuQyhlw0Lts=,tag:wmpUQqq9CvMcq3lhEQyEXA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -19,14 +18,14 @@ sops:
         - recipient: age1582vh25trj6w7klwt38d44n5nr8njr8rrxxx5kcfu3y2ezx9ss3s6j24ex
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxUmM0ODh1MVZCMk9RV3hT
-            bXRmNk5BWDdpYUMyck5JQTFzTUx3RDdDRGdnCk82L21mVFUxNDJKZVFsQjB2d0Uz
-            OFVBbldhaThYOHJ4WWNpQlRZVHdab3cKLS0tIGJjQUcrSFJKeFdJYTErRE1vQmxD
-            T2JqUEF5NStDWWxEWmQrSmhaT2luOWsKmDHvs3vaz6OxwUlCeqo+I+YrURXHpHuI
-            Z0EAEOlP2C6X4Jewg3kUx3+Dh14ZOcRx7kbd5/5vW7adDs7fJV9UMw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvMVhncncxd2tIdGlxNEFo
+            SkE3SkNoalQ5R0Nvek5tNDlKbWZ0TTFtbDEwCmhFZkpSZXduVGVkVExNeUZlSlQ2
+            bFFPblNkTlhGaGgrUWE1L2Q5KytFYjgKLS0tIGZhMm9rb1U0N2llckc5Y1V1cy95
+            eUE5MHRHVlpDYTRDU2RKOWFhRjRtRkUKkM+V+wTXTgotinjIlzaCr/DBPZAIWGiR
+            xtVVDf+8t7W7IokaFfptdxEAC2sAASUkSJinh6/MkSwlCJS1awsA3w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-11-08T19:09:30Z"
-    mac: ENC[AES256_GCM,data:yvVGqND68evMTv/2v8S+pwOYoluz/bEAjuDAzzDV7IpAOw288+3X7CVxNHU3YfvVmXJZdjQu/y3SkySsPE5p7LxoliERYoV5Ifw/dcakLG7OLxUQ2/t7sTbafKH0Vatlad9xYSuZ5X4sa7qS4lSnNoVZQLYhm5fDygnbQggKShw=,iv:/4mJ7Fc2hjESFRAHMLq3vCsUjRAoCmoUYGx8trNhVkY=,tag:0MQQQFsbAEL/6ITSnYYgzw==,type:str]
+    lastmodified: "2023-11-08T19:18:21Z"
+    mac: ENC[AES256_GCM,data:qnY7N6FpoF/zrVnSKngs8JVQZpXDLcTL8LDgyAKzTrN6WwUEJFbkAewwZAQhp88T6lgxC/NQDrGOC/1i+yTrKd/jmIh/Pts3MM81eff9ROdeF83Pr/awxpAynUB6Borbg8RLb7YtyD4bCyYOeGAsz0Y+pen/SpPNCKdZ4MgM6hQ=,iv:p0F4q+VRKfz+a8qEd7bqte9r9KJsxwkOgZEXwWrsA58=,tag:z5xf+6mjXm//hmzcc/6Adw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
