this is what i used to use idk 🤷

--- a/kubernetes/cluster0/apps/media/qbittorrent/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/media/qbittorrent/app/helm-release.yaml
@@ -41,8 +41,9 @@ spec:
                   cpu: 49m
                   memory: 1024Mi
             securityContext:
-              runAsUser: 568
-              runAsGroup: 568
+              runAsUser: 1000
+              runAsGroup: 1000
+              fsGroup: 1000
           # doh to avoid dns leaks
           dnsdist:
             image:
