--- a/kubernetes/cluster0/apps/home/home-assistant/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/home/home-assistant/app/helm-release.yaml
@@ -14,7 +14,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 1.5.1
+      version: 2.1.1
       sourceRef:
         kind: HelmRepository
         name: bjw-s-charts
@@ -26,16 +26,44 @@ spec:
     remediation:
       retries: 5
   values:
-    image:
-      repository: ghcr.io/home-assistant/home-assistant
-      tag: 2023.11.2
-    env:
-      TZ: "${TIMEZONE}"
-      POSTGRESQL_PASSWORD:
-        valueFrom:
-          secretKeyRef:
-            name: home-assistant-db-secrets
-            key: password
+    controllers:
+      main:
+        containers:
+          main:
+            image:
+              repository: ghcr.io/home-assistant/home-assistant
+              tag: 2023.11.2
+              env:
+                TZ: "${TIMEZONE}"
+                POSTGRESQL_PASSWORD:
+                  valueFrom:
+                    secretKeyRef:
+                      name: home-assistant-db-secrets
+                      key: password
+              resources:
+                requests:
+                  cpu: 47m
+                  memory: 1254M
+            codeserver:
+              image:
+                repository: ghcr.io/coder/code-server
+                tag: 4.18.0
+              env:
+                TZ: "${TIMEZONE}"
+              args:
+                - --auth
+                - "none"
+                - --user-data-dir
+                - "/config/.vscode"
+                - --extensions-dir
+                - "/config/.vscode"
+                - --port
+                - "12321"
+                - "/config"
+              resources:
+                requests:
+                  cpu: 10m
+                  memory: 110M
     service:
       main:
         ports:
@@ -56,37 +84,13 @@ spec:
             paths:
               - path: /
                 pathType: Prefix
+                service:
+                  name: main
+                  port: http
     persistence:
       config:
-        enabled: true
         storageClass: longhorn
         existingClaim: pvc-home-assistant
-        mountPath: /config
         retain: true
-    addons:
-      codeserver:
-        enabled: true
-        image:
-          repository: ghcr.io/coder/code-server
-          tag: 4.18.0
-        env:
-          TZ: "${TIMEZONE}"
-        args:
-          - --auth
-          - "none"
-          - --user-data-dir
-          - "/config/.vscode"
-          - --extensions-dir
-          - "/config/.vscode"
-          - --port
-          - "12321"
-          - "/config"
-        volumeMounts:
-          - name: config
-            mountPath: /config
-      resources:
-        requests:
-          cpu: 10m
-          memory: 110M
-        limits:
-          memory: 454M
+        globalMounts:
+          - path: /config
