--- a/kubernetes/cluster0/apps/home/home-assistant/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/home/home-assistant/app/helm-release.yaml
@@ -70,6 +70,7 @@ spec:
           http:
             port: 8123
       codeserver:
+        controller: main
         ports:
           http:
             port: 12321
