--- a/kubernetes/cluster0/apps/home/home-assistant/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/home/home-assistant/app/helm-release.yaml
@@ -97,6 +97,7 @@ spec:
         storageClass: longhorn
         existingClaim: pvc-home-assistant
         retain: true
+        enabled: true
         advancedMounts:
           main:
             main:
