disable IP pool for cilium, the official way

--- a/kubernetes/cluster0/apps/kube-system/cilium/config/cilium-ippool.yaml
+++ b/kubernetes/cluster0/apps/kube-system/cilium/config/cilium-ippool.yaml
@@ -5,5 +5,6 @@ kind: CiliumLoadBalancerIPPool
 metadata:
   name: pool
 spec:
+  disabled: true # temporarily disable due to instability
   cidrs:
     - cidr: ${LOADBALANCER_IP_POOL}
